<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            />
    </LinearLayout>

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/grey"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/uranus"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:textColorHint="@color/grey"
        android:background="@drawable/edt_bg_selector"
        android:paddingStart="10dp"
        android:textSize="16sp"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"/>

    <EditText
        android:id="@+id/workEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/work"
        android:textColorHint="@color/grey"
        android:background="@drawable/edt_bg_selector"
        android:paddingStart="10dp"
        android:textSize="16sp"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"/>

    <EditText
        android:id="@+id/mailEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/mail"
        android:textColorHint="@color/grey"
        android:background="@drawable/edt_bg_selector"
        android:paddingStart="10dp"
        android:textSize="16sp"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"/>

</LinearLayout>