<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/inboxSelectButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/realBlack"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            />

    </LinearLayout>

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/grey"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:background="@color/searchGrey"
        />

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/grey"
        />

    <TextView
        android:id="@+id/mailInformTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:text="@string/mailinform"
        android:textColor="@color/realBlack"
        android:layout_marginStart="10dp"
        />

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@color/grey"
        />

    <TextView
        android:id="@+id/refreshTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:text="@string/refreshrate"
        android:textColor="@color/realBlack"
        android:layout_marginStart="10dp"
        />

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@color/grey"
        />

    <TextView
        android:id="@+id/resetTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:text="@string/resetpassword"
        android:textColor="@color/realBlack"
        android:layout_marginStart="10dp"
        />

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/grey"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/searchGrey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="28dp"
            android:orientation="vertical">

            <View
                android:layout_height="1px"
                android:layout_width="match_parent"
                android:background="@color/grey"
                />

            <TextView
                android:id="@+id/logoutTextView"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:gravity="center"
                android:text="@string/logout"
                android:background="@color/white"
                android:textColor="@color/red"
                android:textSize="16sp"
                >
            </TextView>

            <View
                android:layout_height="1px"
                android:layout_width="match_parent"
                android:background="@color/grey"
                />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>