<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:layout_marginTop="4dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="-5dp"
            android:padding="8dp"
            android:src="@drawable/close"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/write_mail"
            android:textSize="18sp"
            android:background="@null"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            />

    </LinearLayout>

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/grey"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/receiver"
                android:textColor="@color/topicGrey"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/receiverEdittext"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:textSize="15sp"
                android:inputType="text"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:layout_marginStart="3dp"
                android:background="@null"/>

        </LinearLayout>

        <View
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/grey"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sender"
                android:textColor="@color/topicGrey"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/senderTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:textSize="15sp"
                android:textColor="@color/realBlack"
                android:maxLines="1"
                android:layout_marginStart="3dp"
                android:background="@null"/>

        </LinearLayout>

        <View
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/grey"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/topic"
                android:textColor="@color/topicGrey"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/topicEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:textSize="15sp"
                android:inputType="text"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:layout_marginStart="3dp"
                android:background="@null"/>

        </LinearLayout>

        <View
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/grey"
            />

        <EditText
            android:id="@+id/contentEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:paddingStart="10dp"
            android:textSize="15sp"
            android:textCursorDrawable="@null"
            android:background="@null"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>

</LinearLayout>