<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/searchGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/inboxSelectButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/realBlack"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            />

    </LinearLayout>

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/grey"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:background="@color/searchGrey"
        />

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/grey"
        />


    <LinearLayout
        android:id="@+id/openLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/openImageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/selected"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open"
            android:textSize="17sp"
            android:textColor="@color/realBlack"/>

    </LinearLayout>

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@color/grey"
        />

    <LinearLayout
        android:id="@+id/closeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/closeImageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/selected"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textSize="17sp"
            android:textColor="@color/realBlack"/>

    </LinearLayout>

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/grey"
        android:alpha="0.7"
        />

</LinearLayout>
