<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:scaleType="fitXY"
            android:layout_marginTop="1dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="-5dp"
            android:padding="8dp"
            android:src="@drawable/back"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            />
    </LinearLayout>

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/grey"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:src="@drawable/planet_earth_1"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="90dp"/>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="@color/realBlack"
        android:textSize="18sp"
        android:layout_marginStart="35dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginStart="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/work"
            android:textSize="16sp"
            android:textColor="@color/topicGrey"
            android:gravity="center"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/workTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/realBlack"
            android:gravity="center"
            android:layout_marginEnd="35dp"/>

    </LinearLayout>

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/grey"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mail"
            android:textSize="16sp"
            android:textColor="@color/topicGrey"
            android:gravity="center"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/mailAddress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/realBlack"
            android:gravity="center_vertical"
            android:layout_marginEnd="35dp"/>

        <ImageView
            android:id="@+id/sendButton"
            android:layout_width="36dp"
            android:layout_height="38dp"
            android:scaleType="fitXY"
            android:padding="8dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/edit_blue"/>

    </LinearLayout>

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/grey"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        />


</LinearLayout>