<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <FrameLayout
        android:id="@+id/frameContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

    </FrameLayout>

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/grey"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:alpha="0.8
        ">

        <RelativeLayout
            android:id="@+id/mailLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/mailToggleButton"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/mail"
                    android:layout_marginTop="5dp"
                    />

                <TextView
                    android:id="@+id/mailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mail"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/contactLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/contactToggleButton"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/contact_2"
                    android:layout_marginTop="5dp"
                    />

                <TextView
                    android:id="@+id/contactText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/contacts"
                    android:textColor="@color/frameGrey"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settingLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/settingToggleButton"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/set_2"
                    android:layout_marginTop="5dp"
                    />

                <TextView
                    android:id="@+id/settingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/setting"
                    android:textColor="@color/frameGrey"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
