<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:scaleType="fitXY"
            android:layout_marginTop="1dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="-5dp"
            android:padding="8dp"
            android:src="@drawable/back"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@+id/replyButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:layout_marginTop="7dp"
            android:layout_marginStart="6dp"
            android:padding="8dp"
            android:src="@drawable/reply"/>

        <ImageView
            android:id="@+id/deleteButton"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:scaleType="fitXY"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="6dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:src="@drawable/delete"/>

    </LinearLayout>

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/grey"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/topicTextView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="@color/realBlack"
            android:textSize="18sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/receiver"
                android:textColor="@color/topicGrey"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/receiverTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:paddingStart="10dp"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="3dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sender"
                android:textColor="@color/topicGrey"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/senderTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:paddingStart="10dp"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="3dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/topicGrey"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:paddingStart="10dp"
                android:textSize="15sp"
                android:layout_marginStart="3dp"
                />

        </LinearLayout>

        <View
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/grey"
            />

        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>

</LinearLayout>